# single-user-dungeon

./: .gitattributes  LICENSE  Makefile  README.md  engine.py  libraries.py  mud.py  pyproject.toml  requirements-dev.txt  start.py  tmp.py  unittest.py
language/: en.json  pt_BR.json  pt_BR_incomplete.json
objects/: apple.txt  lightsaber.txt  object_template.txt  poo.txt  rose.txt  sparrow.txt
rooms/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  room_template.txt  zone1.xml
spawns/: spawns.xml
src/game/: engine.py  libraries.py  main.py
src/game/language/: en.json  pt_BR.json
